@@ -153,13 +153,27 @@ abstract class CBaseController extends CComponent
 	 * Creates a widget and executes it.
 	 * @param string the widget class name or class in dot syntax (e.g. application.widgets.MyWidget)
 	 * @param array list of initial property values for the widget (Property Name => Property Value)
-	 * @return CWidget the widget instance. This return value has been available since version 1.0.4.
+	 * @param boolean whether to capture the output of the widget. If true, the method will capture
+	 * and return the output generated by the widget. If false, the output will be directly sent for display
+	 * and the widget object will be returned. This parameter is available since version 1.1.2.
+	 * @return mixed the widget instance when $captureOutput is false, or the widget output when $captureOutput is true.
 	 */
-	public function widget($className,$properties=array())
+	public function widget($className,$properties=array(),$captureOutput=false)
 	{
-		$widget=$this->createWidget($className,$properties);
-		$widget->run();
-		return $widget;
+		if($captureOutput)
+		{
+			ob_start();
+			ob_implicit_flush(false);
+			$widget=$this->createWidget($className,$properties);
+			$widget->run();
+			return ob_get_clean();
+		}
+		else
+		{
+			$widget=$this->createWidget($className,$properties);
+			$widget->run();
+			return $widget;
+		}
 	}
 
 	/**
